# Internet_Shop_DRF

./: .gitignore  README.md  pyproject.toml
src/accounts/: serializers.py  views.py
src/cart/: models.py  serializers.py  urls.py  views.py
src/cart/migrations/: 0001_initial.py
src/categories/: factories.py  models.py  serializers.py  urls.py
src/categories/migrations/: 0001_initial.py  0002_category_parent.py
src/config/: settings.py  urls.py
src/object_storage/: client.py  factory.py  s3_service.py
src/order/: mail_sender_service.py  models.py  serializers.py  urls.py  views.py
src/order/migrations/: 0001_initial.py
src/products/: factories.py  filters.py  models.py  serializers.py  signals.py  urls.py  views.py
src/products/management/commands/: seed.py
src/products/migrations/: 0001_initial.py
